# Guildwars2_TeamBuilder

./: .coveragerc  .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  .pypirc.example  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README_NETLIFY.md  alembic.ini  check_database.py  check_db.py  check_db_structure.py  check_environment.py  check_itemstats.py  check_skill_types.py  check_tables.py  coverage.xml  db_schema.py  docker-compose.yml  init_db.py  init_test_db.py  inspect_db.py  itemstats_validation_20250711_134550.json  main.py  main_debug.py  main_test.py  minimal_test.py  mkdocs.yml  netlify-env.example  netlify.toml  populate_professions.py  populate_test_data.py  pytest.ini  repair_db.py  (+22 more)
app/: __init__.py  config.py  database.py  logging_config.py  main.py  models.py
docs/: GW2_DATA_SERVICE.md  SUPABASE_SETUP.md  build_format.md  cli_usage.md  index.md  sqlalchemy_guide.md
examples/: sql_debug_example.py  standalone_sql_debug_example.py
migrations/: env.py
monitoring/: docker-compose.monitoring.yml
scripts/: README.md  __init__.py  add_sample_builds.py  configure_supabase.py  generate_secret_key.py  gw2_data_sync.py  init_profession_equipment.py  requirements-db.txt  reset_database.py  setup_supabase.py  test_connection.py  test_connection_direct.py  test_import_service.py  test_supabase_client.py
static/: index.html
tests/: README.md  __init__.py  conftest.py  test_api_analyze.py  test_build_model.py  test_builds_edge_cases.py  test_builds_endpoints.py  test_db_connection.py  (+25 more)
(+494 files in other folders)
