[metadata]
description-file = README.md

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
include = app*

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --cov=app --cov-report=term-missing

[coverage:run]
source = app
omit =
    */tests/*
    */__pycache__/*
    */venv/*
    */.env/*

[coverage:report]
show_missing = True
skip_covered = True

[flake8]
max-line-length = 120
exclude = .git,__pycache__,venv
per-file-ignores =
    # Ignorer les erreurs de type E402 (import pas en haut du fichier) pour les fichiers de test
    tests/*.py: E402
    # Ignorer les erreurs de type F401 (import non utilisé) pour les fichiers __init__.py
    */__init__.py: F401

[isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_return_value = True
warn_unreachable = True

[build_system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
